# silent-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  silent-engine.sln
SilentEngine/: Buffer.h  CMakeLists.txt  Camera.cpp  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayout.h  ImGuiData.h  Image.h  Implementations.cpp  Material.cpp  Mesh.cpp  Mesh.h  Pipeline.h  PipelineLayout.h  Renderer.cpp  Renderer.h  Sampler.h  VertexAttribute.h  VkDraw.h  VkInit.cpp  VkInit.h  VkResource.h  Window.cpp  main.cpp
SilentEngine/ECS/: CameraComponent.cpp  Entity.cpp  MeshComponent.cpp  MeshComponent.h
SilentEngine/EngineManagers/: BufferManager.h  DescriptorSetLayoutManager.cpp  DescriptorSetLayoutManager.h  DescriptorSetManager.cpp  DescriptorSetManager.h  ImageManager.h  MaterialManager.cpp  MaterialManager.h  PipelineLayoutManager.cpp  PipelineLayoutManager.h  PipelineManager.cpp  PipelineManager.h  SamplerManager.h  TextureManager.h
SilentEngine/EngineSystems/: EngineStatics.cpp  InputSystem.h  TimeSystem.cpp  TimeSystem.h
libs/Base/: Buffer.cpp  Buffer.h  BufferManager.cpp  BufferManager.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraComponent.cpp  CameraComponent.h  CommandBuffer.cpp  CommandBuffer.h  Component.h  CompositeRenderPass.cpp  CompositeRenderPass.h  DeferredLightningMaterial.cpp  DeferredLightningMaterial.h  DeferredLightningRenderpass.cpp  DeferredLightningRenderpass.h  DeferredRenderPass.cpp  DeferredRenderPass.h  DeferredRenderpass.cpp  DeferredRenderpass.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  DescriptorSetLayoutManager.cpp  DescriptorSetLayoutManager.h  DescriptorSetManager.cpp  DescriptorSetManager.h  DirectionalLight.cpp  DirectionalLight.h  DrawData.cpp  DrawData.h  EngineStatics.cpp  EngineStatics.h  Entity.cpp  Entity.h  FrameData.cpp  FrameData.h  (+62 more)
shaders/: Deferred.frag  Deferred.vert  DeferredLightning.frag  composite.frag  deferred.frag  deferred.vert  pbrComposite.frag  pbrComposite.vert  unlit.frag  unlit.json  unlit.vert
silent-engine/: ProfillerTimer.cpp  ProfillerTimer.h  Texture.cpp  Texture.h  main.cpp  silent-engine.sln  silent-engine.vcxproj  silent-engine.vcxproj.filters  vma_log.csv
silent-engine/shaders/: compile_shaders.bat  unlit.frag  unlit.vert
silent-engine/silent-engine/: VkInit.h  main.cpp  silent-engine.vcxproj  silent-engine.vcxproj.filters
silent-engine/src/: Buffer.h  BufferManager.h  Camera.cpp  Camera.h  CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  DescriptorSetLayoutManager.h  DrawData.cpp  DrawData.h  EngineStatics.cpp  EngineStatics.h  Entity.cpp  Entity.h  ImGuiData.h  Image.h  ImageManager.cpp  ImageManager.h  InputManager.cpp  InputManager.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshComponent.cpp  MeshComponent.h  MeshManager.cpp  MeshManager.h  Pipeline.cpp  Pipeline.h  PipelineLayout.cpp  PipelineLayout.h  PipelineLayoutManager.cpp  PipelineLayoutManager.h  PipelineManager.h  (+23 more)
silent-engine/src/ECS/: CameraComponent.cpp  CameraComponent.h  MeshComponent.h
silent-engine/src/EngineManagers/: BufferManager.cpp  DescriptorSetLayoutManager.cpp  DescriptorSetManager.cpp  DescriptorSetManager.h  MaterialManager.cpp  MaterialManager.h  PipelineManager.cpp  TextureManager.h
silent-engine/src/EngineSystems/: EngineStatics.cpp  EngineStatics.h  InputSystem.cpp  InputSystem.h
src/: CMakeLists.txt  main.cpp
